[INIT] Mise en place de l'architecture de base de l'application Spring Boot
- Création des entités (Utilisateur, Entreprise, Convention, Salarie)
- Implémentation des interfaces DAO/Repository pour l'accès aux données
- Développement des services métier avec validation des règles
- Configuration de la sécurité JWT avec authentification
- Configuration des relations entre entités

Les services implémentés gèrent :
- La gestion des utilisateurs avec authentification JWT
- La gestion des entreprises avec validation des noms uniques
- La gestion des conventions avec contrôle des subventions
- La gestion des salariés avec vérification des contraintes